--- a/css.css
+++ b/css.css
@@ -31,10 +31,26 @@ background-image: url('main_img.jpg');
  right:0%;
  z-index:-3;
 }
+/* orange part */
 .orange
 {
     background-color: rgb(255, 69, 0,0.8);
-    left:10%;
+    left:12%;
     position: absolute;
     z-index: -2;
+    width:700px;
+    height:auto;
+    padding-right:30px;
+    padding-left:30px;
 }
+.bi
+{
+    margin-top:35px;
+    color:white;
+}
+.logo
+{
+    display:flex;
+    padding-left:100px;
+}
+/* syan part */
